--- a/iiot/taoyuang1000/event/css/style.css
+++ b/iiot/taoyuang1000/event/css/style.css
@@ -598,6 +598,34 @@ a.gotop {
   padding: 60px 50px 0 50px;
 }
 
+.middle-container .event-content .info a.btn-record {
+  width: 100%;
+  max-width: 400px;
+  text-align: center;
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#33b7ba+36,9982f2+100 */
+  background: #33b7ba;
+  /* Old browsers */
+  /* FF3.6-15 */
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(45deg, #33b7ba 36%, #9982f2 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#33b7ba', endColorstr='#9982f2',GradientType=1 );
+  /* IE6-9 fallback on horizontal gradient */
+  color: #fff;
+  font-weight: bold;
+  border-radius: 50px;
+  padding: 18px;
+  margin: 0 auto 25px auto;
+  display: table;
+  -webkit-box-shadow: #369395 3px 3px 0px;
+          box-shadow: #369395 3px 3px 0px;
+  font-size: 20px;
+}
+
+.middle-container .event-content .info a.btn-record:hover {
+  opacity: 0.9;
+}
+
 .middle-container .event-content .info p {
   font-size: 17px;
   color: #333;
@@ -622,6 +650,10 @@ a.gotop {
 @media all and (max-width: 600px) {
   .middle-container .event-content .info {
     padding: 40px 20px 0 20px;
+  }
+  .middle-container .event-content .info a.btn-record {
+    font-size: 17px;
+    padding: 18px 12px;
   }
 }
 
