--- a/iiot/taoyuang1000/event/css/style.scss
+++ b/iiot/taoyuang1000/event/css/style.scss
@@ -183,6 +183,9 @@ a.gotop {
       .main-title {
         position: relative;
         margin: 0 auto;
+        a {
+          display: block;
+        }
         .i-accessories {
           position: absolute;
           width: 15%;
@@ -190,11 +193,11 @@ a.gotop {
           right: -11px;
         }
         .i-a {
-          width: 52%;
+          width: 56%;
           float: left;
         }
         .i-b {
-          width: 48%;
+          width: 45%;
           float: left;
           position: absolute;
           bottom: -8px;
@@ -206,12 +209,12 @@ a.gotop {
           }
           .i-b {
             width: 31%;
-            bottom: 39px;
+            // bottom: 39px;
           }
         }
         @media all and (max-width: 400px) {
           .i-b {
-            bottom: 35px;
+            // bottom: 35px;
           }
         }
       }
@@ -323,6 +326,42 @@ a.gotop {
     }
     .info {
       padding: 60px 50px 0 50px;
+      a.btn-record {
+        width: 100%;
+        max-width: 400px;
+        text-align: center;
+        // background-color: #33b7ba;
+        /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#33b7ba+36,9982f2+100 */
+        background: #33b7ba; /* Old browsers */
+        background: -moz-linear-gradient(
+          45deg,
+          #33b7ba 36%,
+          #9982f2 100%
+        ); /* FF3.6-15 */
+        background: -webkit-linear-gradient(
+          45deg,
+          #33b7ba 36%,
+          #9982f2 100%
+        ); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(
+          45deg,
+          #33b7ba 36%,
+          #9982f2 100%
+        ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#33b7ba', endColorstr='#9982f2',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
+        color: #fff;
+        font-weight: bold;
+        border-radius: 50px;
+        padding: 18px;
+        margin: 0 auto 25px auto;
+        display: table;
+        box-shadow: #369395 3px 3px 0px;
+        font-size: 20px;
+        &:hover {
+          opacity: 0.9;
+        }
+      }
       p {
         font-size: 17px;
         color: #333;
@@ -343,6 +382,10 @@ a.gotop {
       }
       @media all and (max-width: 600px) {
         padding: 40px 20px 0 20px;
+        a.btn-record {
+          font-size: 17px;
+          padding: 18px 12px;
+        }
       }
       ul.list {
         padding-left: 20px;
@@ -466,11 +509,12 @@ a.gotop {
       // padding-right: 33%;
       position: relative;
       .table-style {
-        width: calc(50% - 10px);
+        width: calc(33% - 10px);
         float: left;
-        &:last-child {
-          float: right;
-        }
+        margin: 5px;
+        // &:last-child {
+        //   float: right;
+        // }
         @media all and (max-width: 800px) {
           width: 100%;
         }
