委刊單與產品頁小調整
1.委刊單 - 新增其他費用
2.產品 - checkbox 改 下拉選單

--- a/CRM/css/style.css
+++ b/CRM/css/style.css
@@ -3886,6 +3886,10 @@ ul.edit-tool li a:hover {
   background-color: #ebf5f4;
 }
 
+.popup-container .fillin-box .no-line {
+  border-bottom: none;
+}
+
 .popup-container .fillin-box .text-add {
   padding: 15px 0px 15px 36px;
 }
