--- a/iiot/taoyuang1000/event/css/style.scss
+++ b/iiot/taoyuang1000/event/css/style.scss
@@ -266,6 +266,13 @@ a.gotop {
           font-size: 18px;
         }
       }
+      .video-box {
+        padding: 20px 0;
+        iframe {
+          width: 100%;
+          height: 500px;
+        }
+      }
     }
     table.table-style {
       width: 100%;
@@ -379,12 +386,30 @@ a.gotop {
         p {
           font-size: 15px;
         }
+        .video-box {
+          iframe {
+            height: 420px;
+          }
+        }
       }
       @media all and (max-width: 600px) {
         padding: 40px 20px 0 20px;
         a.btn-record {
           font-size: 17px;
           padding: 18px 12px;
+        }
+        .video-box {
+          iframe {
+            height: 315px;
+          }
+        }
+      }
+      @media all and (max-width: 450px) {
+        .video-box {
+          padding: 5px 0;
+          iframe {
+            height: 200px;
+          }
         }
       }
       ul.list {
@@ -645,6 +670,13 @@ a.gotop {
         ul {
           padding-top: 5px;
         }
+      }
+    }
+    .inquiret-style {
+      ul {
+        border: 4px solid #f45c5c;
+        box-shadow: inset rgba(#f45c5c, 0.46) 0px 2px 6px,
+          rgba(#f45c5c, 0.46) 0px 2px 6px, rgba(#f45c5c, 0.46) 2px 2px 10px;
       }
     }
   }
