--- a/iiot/taoyuang1000/register/css/style.css
+++ b/iiot/taoyuang1000/register/css/style.css
@@ -88,6 +88,17 @@ body { background-color: #c93035;}
 .landing .open-card-nb .btn-style{ position: relative; min-width: initial; width: initial; padding: 0 10px; padding-left: 40px; }
 .landing .open-card-nb .btn-style::after{content: ""; position: absolute; top:calc(50% - 8px); left: 12px; width: 20px; height: 16px; display: block; background: url(../images/sync.svg) center center no-repeat; background-size:contain; }
 
+/*taxi*/
+.style-taxi{ background-color: #00c5be; }
+.style-taxi .img{ max-width: 600px;}
+.style-taxi .text-important, .style-taxi .privacy-content p, .style-taxi .privacy-content p a{ color: #fff2c9;}
+.style-taxi p.text-error, .style-taxi .text-info{ color: #f5ff92;}
+.style-taxi .contents-box{padding-top: 0;}
+.style-taxi .edit-userinfo .field input{ background-color: #50a0c3; border: 2px solid #3a8cb1;}
+.style-taxi .edit-userinfo .field input::placeholder{ color: #217297;}
+.style-taxi .edit-userinfo .field .for-bd::after{ background: url(../images/calendar-alt-solid.svg) center center no-repeat #3a8cb1; background-size: 25%;}
+.style-taxi ul.nb li{ border-bottom: 2px dashed #ffffff54;}
+
 @media (max-width:650px) {
 	.landing .contents-box{padding-top: 0;}
 	.landing .maintitle{ font-size: 20px; padding-bottom: 5px; }
@@ -122,3 +133,6 @@ body { background-color: #c93035;}
 .popup-container .text-info{ color: #555; padding-bottom: 15px; font-size: 14px;}
 .popup-container .text-info a{ color: #a3454f; text-decoration: underline;}
 .popup-container .text-info a:hover{ text-decoration: none;}
+
+.popup-taxi .maintitle,
+.popup-taxi .text-info a{ color: #50a0c3; }
