--- a/iiot/taoyuang1000/linetaxi/css/style.css
+++ b/iiot/taoyuang1000/linetaxi/css/style.css
@@ -531,6 +531,15 @@ a.gotop {
   }
 }
 
+.middle-container .event-content .card .video-box {
+  padding: 20px 0;
+}
+
+.middle-container .event-content .card .video-box iframe {
+  width: 100%;
+  height: 500px;
+}
+
 .middle-container .event-content table.table-style {
   width: 100%;
   overflow: hidden;
@@ -626,11 +635,26 @@ a.gotop {
   .middle-container .event-content .info p {
     font-size: 15px;
   }
+  .middle-container .event-content .info .video-box iframe {
+    height: 420px;
+  }
 }
 
 @media all and (max-width: 600px) {
   .middle-container .event-content .info {
     padding: 40px 20px 0 20px;
+  }
+  .middle-container .event-content .info .video-box iframe {
+    height: 315px;
+  }
+}
+
+@media all and (max-width: 450px) {
+  .middle-container .event-content .info .video-box {
+    padding: 5px 0;
+  }
+  .middle-container .event-content .info .video-box iframe {
+    height: 200px;
   }
 }
 
