--- a/iiot/taoyuang1000/linetaxi/css/style.scss
+++ b/iiot/taoyuang1000/linetaxi/css/style.scss
@@ -262,6 +262,13 @@ a.gotop {
           font-size: 18px;
         }
       }
+      .video-box {
+        padding: 20px 0;
+        iframe {
+          width: 100%;
+          height: 500px;
+        }
+      }
     }
     table.table-style {
       width: 100%;
@@ -346,9 +353,27 @@ a.gotop {
         p {
           font-size: 15px;
         }
+        .video-box {
+          iframe {
+            height: 420px;
+          }
+        }
       }
       @media all and (max-width: 600px) {
         padding: 40px 20px 0 20px;
+        .video-box {
+          iframe {
+            height: 315px;
+          }
+        }
+      }
+      @media all and (max-width: 450px) {
+        .video-box {
+          padding: 5px 0;
+          iframe {
+            height: 200px;
+          }
+        }
       }
       ul.list {
         padding-left: 20px;
