--- a/iiot/taoyuang1000/rewards-card/css/style.css
+++ b/iiot/taoyuang1000/rewards-card/css/style.css
@@ -204,12 +204,16 @@ body {
   border-color: #9e9e9e;
 }
 
+button {
+  margin: 0 auto 10px auto;
+  color: #454c60;
+}
+
 button.btn {
   background-color: #ffeb3b;
-  margin: 0 auto;
   width: 100%;
   max-width: 250px;
-  padding: 10px 15px;
+  padding: 15px;
   text-align: center;
   display: inline-block;
   border-radius: 4px;
@@ -221,6 +225,21 @@ button.btn {
 
 button.btn:hover {
   opacity: 0.9;
+}
+
+button.bg-gray {
+  background-color: #d6d6d6;
+}
+
+.both-btn {
+  padding-bottom: 10px;
+  text-align: center;
+}
+
+.both-btn button {
+  display: inline-block;
+  width: 45%;
+  margin: 0 1%;
 }
 
 .container {
@@ -506,7 +525,7 @@ button.btn:hover {
 
 .popup-container {
   width: 100%;
-  padding: 20px 20px 25px 20px;
+  padding: 20px;
   text-align: center;
   min-height: 160px;
 }
@@ -521,7 +540,7 @@ button.btn:hover {
 
 .popup-container .text-info {
   color: #555;
-  padding: 15px 0;
-  font-size: 14px;
+  padding: 12px 0 20px 0;
+  font-size: 15px;
 }
 /*# sourceMappingURL=style.css.map */
