--- a/iiot/taoyuang1000/join-tycg/css/style.css
+++ b/iiot/taoyuang1000/join-tycg/css/style.css
@@ -15,7 +15,7 @@ img { vertical-align: middle; }
 *:first-child + html .clearfix { min-height: 1%; }
 
 body, h1, h2, h3, h4, h5, h6, p, select, input, textarea, button { font-family: 'Noto Sans TC', 'Arial', '微軟正黑體', '新細明體', 'sans-serif'; font-weight: normal; color: #333F48; }
-p { font-size: 14px; }
+p { font-size: 16px; }
 a { cursor: pointer; text-decoration: none; outline: none; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; }
 a:hover { text-decoration: none; }
 *:link, *:visited, *:hover, *:active, *:focus, * { border: none; outline: none; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
@@ -47,15 +47,15 @@ a:hover { text-decoration: none; }
 .option-list input[type="radio"]:not(old):checked + label::after {  display: block;}
 
 
-.logo{ width: 120px; height: 86px; display: block; margin: 10px auto; background: url(../images/logo.svg) center center no-repeat; background-size: contain; }
+.logo{ width: 125px; height: 96px; display: block; margin: 10px auto; background: url(../images/logo.svg) center center no-repeat; background-size: contain; }
 .landing{ background: url(../images/bg.png); display: block; background-size: cover;}
-.landing .logo{margin-top: 10vh;}
+.landing .logo{margin-top: 6vh;}
 .landing .contents-box{min-height:100vh; width: 100%; padding:20px; max-width: 600px; margin: 0 auto; text-align: center; }
-.landing .maintitle{ text-align: center; font-size: 24px; font-weight: bold;}
-.landing .subtitle{ position: relative; font-size: 18px; text-align: center; font-weight: bold; padding: 10px 0; margin-bottom: 10px; }
+.landing .maintitle{ text-align: center; font-size: 26px; padding: 6px 0; font-weight: bold;}
+.landing .subtitle{ position: relative; font-size: 20px; text-align: center; font-weight: bold; padding: 20px 0; margin-bottom: 20px; }
 .landing .subtitle:after{ content: ""; position:absolute; left:calc(50% - 10px); bottom: 0; width: 20px; height: 2px; background-color:#EF6079;}
 .landing .subtitle span{ font-size: 17px; font-weight: normal; display: inline-block; padding-top: 15px; }
-.landing .middle-box{padding: 18vh 0;}
+.landing .middle-box{padding: 13vh 0 20vh 0;}
 
 .landing .text-info{ color: #ffcc6f;}
 .landing ul.nb{ padding: 15px 0; max-width: 260px; margin: 0 auto;}
@@ -63,27 +63,27 @@ a:hover { text-decoration: none; }
 .landing ul.nb li p{color: #ffcc6f; font-size: 24px; font-style: italic; font-weight: bold; }
 
 .landing .img{ max-width: 500px; margin: 0 auto; }
-.landing p.text-error{ width: 100%; color: #EB5757; padding: 5px 5px 5px 40px; }
+.landing p.text-error{ width: 100%; font-size: 14px; color: #EB5757; padding: 5px 5px 5px 40px; }
 
-.landing .link{ padding:10px 0 5px 0; font-size: 11px;}
+.landing .link{ padding:10px 0 5px 0; font-size: 13px;}
 .landing .link a{ color: #EF6079; text-decoration:underline;}
 .landing .link a:hover{text-decoration:none;}
-.landing .text-confirm{ color: #828282; }
+.landing .text-confirm{ color: #545454; }
 
-.for-register .logo{ margin-top: 6vh; width: 96px;}
+.for-register .logo{ margin-top: 3vh; width: 96px;}
 
 .for-gender label.form-label{ float: left; line-height: 38px; padding-right: 25px; font-size: 14px;}
 .for-gender .gender-list{ float: left; width: initial; }
 .for-gender .gender-list li{float: left; padding-right: 15px;}
 
-.btn-default{ cursor: pointer; min-width: 156px; color: #fff; background-color: #EF6079; border-radius:50px; height: 40px; line-height: 39px; font-size: 14px; display: inline-block; margin: 10px 0;}
+.btn-default{ cursor: pointer; min-width: 180px; color: #fff; background-color: #EF6079; border-radius:50px; height: 44px; line-height: 42px; font-size: 17px; display: inline-block; margin: 10px 0;}
 .btn-default:hover{ opacity: .9; }
 .btn-out{ background-color: #ec759c; display: block; margin: 0 auto; }
-.btn-linelogin{ border-radius: 5px; text-indent: 30px; width: 100%; height: 35px; line-height: 35px; max-width: 200px; background: url(../images/line-brands.svg) 10px center no-repeat #06C755; }
+.btn-linelogin{ border-radius: 5px; text-indent: 35px; width: 100%; height: 44px; line-height: 44px; max-width: 300px; background: url(../images/line-brands.svg) 10px center no-repeat #06C755; }
 
 .edit-userinfo{ width: 100%; padding: 25px 0; margin: 0 auto; }
 .edit-userinfo .field{ width: 100%; text-align: left; padding: 5px 0;}
-.edit-userinfo .field .bg-field{ background-color: #fff; border-radius: 50px; position: relative; padding-left: 40px; border: 2px solid #fff; width: 100%; min-height: 40px; display: block; }
+.edit-userinfo .field .bg-field{ background-color: #fff; border-radius: 50px; position: relative; padding-left: 45px; border: 2px solid #fff; width: 100%; min-height: 40px; display: block; }
 .edit-userinfo .field .bg-field::after{ content: ""; position: absolute; left: 4px; top: 0px; pointer-events: none; width: 40px; height: 38px; display: block; visibility: visible;}
 
 .edit-userinfo .field .r-input{ width: 100%;}
@@ -99,8 +99,8 @@ a:hover { text-decoration: none; }
 .edit-userinfo .field .for-mail::after{ background: url(../images/envelope-solid.svg) center center no-repeat; background-size: 33%;}
 
 .edit-userinfo .field .for-verify input{ float: left; width: calc(100% - 90px); }
-.edit-userinfo .field .for-verify button{ float: left; min-width: 85px; height: 30px; line-height: 30px; font-size: 12px; margin: 4px 4px 0 0; }
-.edit-userinfo .field .for-verify::after{ background: url(../images/lock-solid.svg) center center no-repeat; background-size: 33%;}
+.edit-userinfo .field .for-verify button{ float: left; min-width: 85px; height: 30px; line-height: 28px; font-size: 13px; margin: 4px 4px 0 0; }
+.edit-userinfo .field .for-verify::after{ background: url(../images/lock-solid.svg) center center no-repeat; background-size: 31%;}
 
 .edit-userinfo .field input{ background:none;appearance:none;-moz-appearance:none; -webkit-appearance:none; background-color: transparent; width: 100%; line-height: 38px; height: 38px;}
 .edit-userinfo .field input::placeholder{ color: #BDBDBD;}
@@ -116,22 +116,23 @@ a:hover { text-decoration: none; }
 .landing ul.link li:first-child a{ background-color: #673ab7;}
 
 .landing .privacy-content{ max-width: 800px;}
-.landing .privacy-content h3{ text-align: justify; font-size: 14px;}
-.landing .privacy-content h4{ text-align: left; font-size: 13px; padding: 30px 0 15px 0;}
-.landing .privacy-content p{ text-align: justify;}
+.landing .privacy-content h3{ text-align: justify; font-size: 16px; font-weight: bold;}
+.landing .privacy-content h4{ text-align: left; font-size: 15px; padding: 30px 0 15px 0;}
+.landing .privacy-content p{ text-align: justify; font-size: 14px;}
 .landing .privacy-content p a{ color: #3e3e3e; text-decoration: underline;}
 .landing .privacy-content p a:hover{text-decoration:none;}
 
 
 @media (max-width:650px) {
-	.landing .maintitle{ font-size: 20px; padding-bottom: 5px; }
 	.edit-userinfo .field input{ font-size: 14px; }
 	.landing ul.link li{ margin: 10px; display: block; text-align: center; }
 	.landing ul.link li p{display: inline-block; }
 	.landing .privacy-content p{ font-size: 13px;}
 	.top-notes ul li{ font-size: 12px; }
 }
-
+@media (max-width:320px) {
+	.btn-linelogin{ text-indent: 30px; height: 35px; line-height: 35px; max-width: 240px; }
+}
 /*popup - style---------*/
 .mfp-bg {top: 0; left: 0; width: 100%; height: 100%; z-index: 1042; overflow: hidden; position: fixed; background: #000000; opacity: 0.25;}
 .mfp-wrap {top: 0; left: 0; width: 100%; height: 100%; z-index: 1043; position: fixed; outline: none !important; backface-visibility: hidden; -webkit-backface-visibility: hidden;}
@@ -145,7 +146,7 @@ a:hover { text-decoration: none; }
 
 .popup-container { width: 100%; padding: 20px; text-align: center; min-height: 180px; border-radius: 20px;}
 .popup-container .icon-404{ width: 40px; height: 40px; margin: 0 auto; }
-.popup-container .maintitle{ font-size: 18px; color: #000; letter-spacing: 4px; font-weight: bold; padding: 10px 0;}
+.popup-container .maintitle{ font-size: 20px; color: #000; letter-spacing: 4px; font-weight: bold; padding: 10px 0;}
 .popup-container .text-info{ color: #555; padding-bottom: 15px; font-size: 14px;}
 .popup-container .text-info a{ color: #ef6079; text-decoration: underline;}
 .popup-container .text-info a:hover{ text-decoration: none;}
